Unified spacing + fixed white space under the footer

--- a/src/app/pages/app-list/_app-list-theme.scss
+++ b/src/app/pages/app-list/_app-list-theme.scss
@@ -17,18 +17,16 @@
 
     hr {
       border: none;
-      border-top: solid 1px rgba(mat-color($foreground, secondary-text), .1)
+      border-top: solid 1px rgba(mat-color($foreground, secondary-text), .1);
     }
 
     a {
-      color: mat-color($foreground, secondary-text)!important;
+      color: mat-color($foreground, secondary-text) !important;
 
       &.docs-component-viewer-sidenav-item-selected,
       &:hover {
-        color: mat-color($primary)!important;
+        color: mat-color($primary) !important;
       }
     }
   }
-
-
 }
